@@ -2,6 +2,35 @@
 <appendix id="release_notes">
   <title>Appendix</title>
     <subtitle>Release Notes</subtitle>
+
+    <sect1>
+      <title>Release 2.5.3</title>
+      <para>Release date: 2019/08/10</para>
+      <para>If compiling with PostgreSQL+JIT, LLVM >= 6 is required</para>
+      <para>Supported PostgreSQL versions for this release are:
+      PostgreSQL 9.4 - PostgreSQL 11, GEOS &gt;= 3.5</para>
+      <simplesect>
+        <title>Bug Fixes</title>
+          <para>4348, ST_AsMVTGeom (GEOS): Enforce validation at all times (Raúl Marín)</para>
+          <para>4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)</para>
+          <para>4326, Fix circular arc distance calculation (Paul Ramsey)</para>
+          <para>4380, Simple TIN support to allow viz in QGIS (Paul Ramsey)</para>
+          <para>4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)</para>
+          <para>4327, Avoid pfree'ing the result of getenv (Raúl Marín)</para>
+          <para>4406, Throw on invalid characters when decoding geohash (Raúl Marín)</para>
+          <para>4440, Internal type lookups fail over FDW (Paul Ramsey)</para>
+          <para>4445, Fix bug in lwgeom_le (Raúl Marín)</para>
+          <para>4466, Fix undefined behaviour in _postgis_gserialized_stats (Raúl Marín)</para>
+          <para>4209, Handle NULL geometry values in pgsql2shp (Paul Ramsey)</para>
+          <para>4419, Use protobuf version to enable/disable mvt/geobuf (Paul Ramsey)</para>
+          <para>4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)</para>
+          <para>4461, ST_AsTWKB doesn't always remove duplicate points (Nicklas Avén)</para>
+          <para>4459, Fix ST_Subdivide crash on intermediate EMPTY (Darafei Praliaskouski)</para>
+          <para>4470, ST_GeomFromGeoJSON crash on empty rings (Darafei Praliaskouski)</para>
+          <para>4420, update path does not exists for address_standardizer extension (Regina Obe)</para>
+      </simplesect>
+    </sect1>
+
     <sect1>
       <title>Release 2.5.2</title>
       <para>Release date: 2019/03/11</para>
