@@ -1,5 +1,5 @@
 PostGIS 2.5.3
-2019/XX/XX
+2019/08/xx
 
  * Bug fixes *
 
@@ -16,9 +16,10 @@ PostGIS 2.5.3
   - #4209, Handle NULL geometry values in pgsql2shp (Paul Ramsey)
   - #4419, Use protobuf version to enable/disable mvt/geobuf (Paul Ramsey)
   - #4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)
-  - #4461, ST_AsTWKB doesn't always remove duplicate points (Nik Aven)
+  - #4461, ST_AsTWKB doesn't always remove duplicate points (Nicklas Avén)
   - #4459, Fix ST_Subdivide crash on intermediate EMPTY (Darafei Praliaskouski)
   - #4470, ST_GeomFromGeoJSON crash on empty rings (Darafei Praliaskouski)
+  - #4420, update path does not exists for address_standardizer extension (Regina Obe)
 
 
 PostGIS 2.5.2
